# proc-macro-test

./: Cargo.toml  README.md
.cargo/: config.toml
my-os-test/: Cargo.toml  link32.ld
my-os-test/src/: main.rs
my-proc-macro/: Cargo.toml
my-proc-macro-test/: Cargo.toml  build.rs  link64.ld
my-proc-macro-test/src/: main.rs
my-proc-macro/src/: codegen.rs  lib.rs  syntax.rs
my-runtime-lib/: Cargo.toml
my-runtime-lib/src/: lib.rs
