[package]
name = "my-proc-macro-test"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-proc-macro = "0.1"
panic-halt = "*"

[[bin]]
name = "my-proc-macro-test"
test = false
bench = false
