[package]
name = "my-proc-macro"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
features = ["extra-traits", "full"]
